--- a/projects.html
+++ b/projects.html
@@ -131,23 +131,25 @@
             </div>
           </article>
 
-          <!-- 5 -->
-          <article class="flex flex-col overflow-hidden rounded-lg border border-border-light dark:border-border-dark bg-background-light dark:bg-background-dark shadow-sm hover:shadow-lg transition-shadow">
-            <div class="aspect-video w-full bg-black/5 dark:bg-white/5">
-              <img class="h-full w-full object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuDuxz1TCdTJEQWimfLlH4ri235U1ioVZeJv7PuVHAUMp39CNYBF5WIQ7K4AoRWJV-ZZWXvX1KU-jA5Q7CQgahM9Vn7jDw6xWnwnDt7c63rQlDltclQ8-W7MshFugr19р64J6icFfHRZyoTXIbwuJ6MRk6MZF8hN_s4iQaLuAt2xSY2QClrjbaxaqLeuP4XOv5ZI-DoqhDf_hGkwb7O9CxfOWNvn9I8BHQPvR_9wsnh6AL73Cdf7LryoLual7ZSVekMM-HOAjzAtep0e" alt="Университет УрФУ — контроль доступа"/>
-            </div>
-            <div class="flex flex-1 flex-col justify-between p-6">
-              <div>
-                <p class="text-sm font-semibold text-primary">Объект: Университет УрФУ</p>
-                <p class="text-sm text-subtle-light dark:text-subtle-dark">г. Екатеринбург, 2019</p>
-                <dl class="mt-4 space-y-2 text-sm">
-                  <div><dt class="inline font-semibold">Задача: </dt><dd class="inline text-subtle-light dark:text-subtle-dark">Обеспечение безопасности корпусов.</dd></div>
-                  <div><dt class="inline font-semibold">Решение: </dt><dd class="inline text-subtle-light dark:text-subtle-dark">Контроль доступа в учебные аудитории.</dd></div>
-                  <div><dt class="inline font-semibold">Результат: </dt><dd class="inline text-subtle-light dark:text-subtle-dark">Безопасная среда для студентов.</dd></div>
-                </dl>
-              </div>
-            </div>
-          </article>
+<!-- 5 -->
+<article class="flex flex-col overflow-hidden rounded-lg border border-border-light dark:border-border-dark bg-background-light dark:bg-background-dark shadow-sm hover:shadow-lg transition-shadow">
+  <div class="aspect-video w-full bg-black/5 dark:bg-white/5">
+    <img class="h-full w-full object-cover"
+         src="https://picsum.photos/600/400?random=9"
+         alt="Университет УрФУ — контроль доступа"/>
+  </div>
+  <div class="flex flex-1 flex-col justify-between p-6">
+    <div>
+      <p class="text-sm font-semibold text-primary">Объект: Университет УрФУ</p>
+      <p class="text-sm text-subtle-light dark:text-subtle-dark">г. Екатеринбург, 2019</p>
+      <dl class="mt-4 space-y-2 text-sm">
+        <div><dt class="inline font-semibold">Задача: </dt><dd class="inline text-subtle-light dark:text-subtle-dark">Обеспечение безопасности корпусов.</dd></div>
+        <div><dt class="inline font-semibold">Решение: </dt><dd class="inline text-subtle-light dark:text-subtle-dark">Контроль доступа в учебные аудитории.</dd></div>
+        <div><dt class="inline font-semibold">Результат: </dt><dd class="inline text-subtle-light dark:text-subtle-dark">Безопасная среда для студентов.</dd></div>
+      </dl>
+    </div>
+  </div>
+</article>
 
           <!-- 6 -->
           <article class="flex flex-col overflow-hidden rounded-lg border border-border-light dark:border-border-dark bg-background-light dark:bg-background-dark shadow-sm hover:shadow-lg transition-shadow">
