--- a/projects.html
+++ b/projects.html
@@ -59,10 +59,13 @@
 
         <!-- Cards -->
         <div class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3">
+
           <!-- 1 -->
           <article class="flex flex-col overflow-hidden rounded-lg border border-border-light dark:border-border-dark bg-background-light dark:bg-background-dark shadow-sm hover:shadow-lg transition-shadow">
             <div class="aspect-video w-full bg-black/5 dark:bg-white/5">
-              <img class="h-full w-full object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuC2I5IuIx1fg-rfPLk2zMSyuDohI_ZcxTrEe4lXTX2aI814qk4L1z3gxsb_S2THC48vnIkxdY-pu6CLEINH_fMYIcv4KpoStRwUmo4J8Myp_1vL3VMI0qYdCly7M9kSBUpVagJ9Jd9vFQonvZIJBhQt8JJIumy6qWG-fMYBS2_dxm_oZhm9Sccvl3Up3uOEIT0stumoT25EtmWBBjwhefxxnL2xP3mgL9dZ5zk3cYWCg0TBMkJBtwTkfHDf160Fi9d3lMdhkQxzo3lF" alt="Бизнес-центр «Аврора» — видеонаблюдение"/>
+              <img class="h-full w-full object-cover" loading="lazy"
+                   src="https://picsum.photos/800/450?random=1"
+                   alt="Бизнес-центр «Аврора» — видеонаблюдение"/>
             </div>
             <div class="flex flex-1 flex-col justify-between p-6">
               <div>
@@ -80,7 +83,9 @@
           <!-- 2 -->
           <article class="flex flex-col overflow-hidden rounded-lg border border-border-light dark:border-border-dark bg-background-light dark:bg-background-dark shadow-sm hover:shadow-lg transition-shadow">
             <div class="aspect-video w-full bg-black/5 dark:bg-white/5">
-              <img class="h-full w-full object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuAO5KffYorhfmkoQJpRqqFV8ivbCcXBWv_2McUpElvIvDG5nkeLkLv4afwxcE7jG1G6VSawkOL6-6ynkxkceLqZnZyrwca30-hRdzfmzJJKyTuQ-mJ1rhZN2cmsauqzOpArmB2Ri0jQvYObRI_ezufQf86JVeaf_kM7suXaWgP_agSRbc-8qDFQPLbn-L8XBfWrU4kpfg_EYMFN-zZQTBf3K8nlD-VoMxJCynFnopNIM-Xo94JvlwdR7jPvfAq5ZX2Dp3Pfe_o3ACkf" alt="ЖК «Невский Бриз» — интеграция СКУД и домофонии"/>
+              <img class="h-full w-full object-cover" loading="lazy"
+                   src="https://picsum.photos/800/450?random=2"
+                   alt="ЖК «Невский Бриз» — интеграция СКУД и домофонии"/>
             </div>
             <div class="flex flex-1 flex-col justify-between p-6">
               <div>
@@ -98,7 +103,9 @@
           <!-- 3 -->
           <article class="flex flex-col overflow-hidden rounded-lg border border-border-light dark:border-border-dark bg-background-light dark:bg-background-dark shadow-sm hover:shadow-lg transition-shadow">
             <div class="aspect-video w-full bg-black/5 dark:bg-white/5">
-              <img class="h-full w-full object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuC3Z_6Y62CsxFCku9J3aCj6B3f3hHXr8yQJLj_dOJxncqx_hjpvARXmLcSuUsfuRy3ykLPYlmCCsqfw4knWYx0STp7Y4qT5zWAGLLEhtDRvZHCfMnfRYneduMlpjcZ11KBG6ZL_khzAm501OeZzyGUKH40td2zxCKT-ssXCIMLAB3E4FsgvBE8jDJP5ImNMwradnFxiKfzizwdWHmRCIvDBwoDVuHbSfT4YA-djEFShFzRM_hHwNHeOG02-jNKyuXGiGHZZYMYV9lm0" alt="Завод «Технопром» — организация ОПС"/>
+              <img class="h-full w-full object-cover" loading="lazy"
+                   src="https://picsum.photos/800/450?random=3"
+                   alt="Завод «Технопром» — организация ОПС"/>
             </div>
             <div class="flex flex-1 flex-col justify-between p-6">
               <div>
@@ -116,13 +123,15 @@
           <!-- 4 -->
           <article class="flex flex-col overflow-hidden rounded-lg border border-border-light dark:border-border-dark bg-background-light dark:bg-background-dark shadow-sm hover:shadow-lg transition-shadow">
             <div class="aspect-video w-full bg-black/5 dark:bg-white/5">
-              <img class="h-full w-full object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuDI0z6cJtOfhlZM8i8KIZEAv-GFx480nzUp_8FgRciAsgjCavlkJUzesRRYjkl15f8E2n7TB3rDx2YmDkV1E73ddUc_og6STNamE9CffQvHRfte5e_ddQ3WnKcFaOm6tZUav9n5ZYqLWJDbodZbsw0TBgH21PhMuOMQ7ml8PmKpD_JZTt8K74IL2dT_KbU_u-__jE9MB6rAV7TPfSghJDArR149YfAgAiQAHaj81X47jQy9EwayWw78qpeb-AHzu6hJn9gUHJF8hOaW" alt="ТРЦ «Сибирь» — интегрированная система безопасности"/>
+              <img class="h-full w-full object-cover" loading="lazy"
+                   src="https://picsum.photos/800/450?random=4"
+                   alt="ТРЦ «Сибирь» — интегрированная система безопасности"/>
             </div>
             <div class="flex flex-1 flex-col justify-between p-6">
               <div>
                 <p class="text-sm font-semibold text-primary">Объект: ТРЦ «Сибирь»</p>
                 <p class="text-sm text-subtle-light dark:text-subtle-dark">г. Новосибирск, 2020</p>
-                <dl class="mt-4 space-y-2 text-sm">
+                <dl class="mt-4 space-y-2 text см">
                   <div><dt class="inline font-semibold">Задача: </dt><dd class="inline text-subtle-light dark:text-subtle-dark">Комплексная система безопасности.</dd></div>
                   <div><dt class="inline font-semibold">Решение: </dt><dd class="inline text-subtle-light dark:text-subtle-dark">Интеграция видеонаблюдения, СКУД и ОПС.</dd></div>
                   <div><dt class="inline font-semibold">Результат: </dt><dd class="inline text-subtle-light dark:text-subtle-dark">Централизованный мониторинг и управление.</dd></div>
@@ -131,32 +140,34 @@
             </div>
           </article>
 
-<!-- 5 -->
-<article class="flex flex-col overflow-hidden rounded-lg border border-border-light dark:border-border-dark bg-background-light dark:bg-background-dark shadow-sm hover:shadow-lg transition-shadow">
-  <div class="aspect-video w-full bg-black/5 dark:bg-white/5">
-    <img class="h-full w-full object-cover"
-         src="https://picsum.photos/600/400?random=9"
-         alt="Университет УрФУ — контроль доступа"/>
-  </div>
-  <div class="flex flex-1 flex-col justify-between p-6">
-    <div>
-      <p class="text-sm font-semibold text-primary">Объект: Университет УрФУ</p>
-      <p class="text-sm text-subtle-light dark:text-subtle-dark">г. Екатеринбург, 2019</p>
-      <dl class="mt-4 space-y-2 text-sm">
-        <div><dt class="inline font-semibold">Задача: </dt><dd class="inline text-subtle-light dark:text-subtle-dark">Обеспечение безопасности корпусов.</dd></div>
-        <div><dt class="inline font-semibold">Решение: </dt><dd class="inline text-subtle-light dark:text-subtle-dark">Контроль доступа в учебные аудитории.</dd></div>
-        <div><dt class="inline font-semibold">Результат: </dt><dd class="inline text-subtle-light dark:text-subtle-dark">Безопасная среда для студентов.</dd></div>
-      </dl>
-    </div>
-  </div>
-</article>
+          <!-- 5 -->
+          <article class="flex flex-col overflow-hidden rounded-lg border border-border-light dark:border-border-dark bg-background-light dark:bg-background-dark shadow-sm hover:shadow-lg transition-shadow">
+            <div class="aspect-video w-full bg-black/5 dark:bg-white/5">
+              <img class="h-full w-full object-cover" loading="lazy"
+                   src="https://picsum.photos/800/450?random=5"
+                   alt="Университет УрФУ — контроль доступа"/>
+            </div>
+            <div class="flex flex-1 flex-col justify-between p-6">
+              <div>
+                <p class="text-sm font-semibold text-primary">Объект: Университет УрФУ</p>
+                <p class="text-sm text-subtle-light dark:text-subtle-dark">г. Екатеринбург, 2019</p>
+                <dl class="mt-4 space-y-2 text-sm">
+                  <div><dt class="inline font-semibold">Задача: </dt><dd class="inline text-subtle-light dark:text-subtle-dark">Обеспечение безопасности корпусов.</dd></div>
+                  <div><dt class="inline font-semibold">Решение: </dt><dd class="inline text-subtle-light dark:text-subtle-dark">Контроль доступа в учебные аудитории.</dd></div>
+                  <div><dt class="inline font-semibold">Результат: </dt><dd class="inline text-subtle-light dark:text-subtle-dark">Безопасная среда для студентов.</dd></div>
+                </dl>
+              </div>
+            </div>
+          </article>
 
           <!-- 6 -->
           <article class="flex flex-col overflow-hidden rounded-lg border border-border-light dark:border-border-dark bg-background-light dark:bg-background-dark shadow-sm hover:shadow-lg transition-shadow">
             <div class="aspect-video w-full bg-black/5 dark:bg-white/5">
-              <img class="h-full w-full object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuDWjsuplQ3yKynIxMbtNBoRIFZc2sNgejEfFXvTELeiEMELPEWkRsBCpx0Jb0p246z5yzQo1ifQJgq4d9V5l4DEsRfxAypokBLVRbQnuWssROzn6q5mJ7IgEu32QXe7llVwXPtY7eTpsMwbw0JxsjY5kncbzKnED7rIF3zHdJ-vQxC9itrUO9-tiyo3PdkyoGUvcRwkbyxK92fghG63VwPJA2tCCkwNKWnqCHK_sMP6pAb1vINQZOVRwzsMNgZ8-3g8ICq658uf7Ics" alt="Областная больница — биометрический доступ"/>
+              <img class="h-full w-full object-cover" loading="lazy"
+                   src="https://picsum.photos/800/450?random=6"
+                   alt="Областная больница — биометрический доступ"/>
             </div>
-            <div class="flex flex-1 flex-col justify-between p-6">
+            <div class="flex flex-1 flex-col justify-between п-6">
               <div>
                 <p class="text-sm font-semibold text-primary">Объект: Областная больница</p>
                 <p class="text-sm text-subtle-light dark:text-subtle-dark">г. Нижний Новгород, 2018</p>
@@ -168,6 +179,7 @@
               </div>
             </div>
           </article>
+
         </div>
       </section>
     </main>
