--- a/index.html
+++ b/index.html
@@ -222,5 +222,19 @@
 
   <!-- Скрипт инклюда (подставит хедер/футер и активирует навигацию) -->
   <script src="assets/include.js"></script>
+  
+  <!-- Netlify Identity Widget (for CMS authentication) -->
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <script>
+    if (window.netlifyIdentity) {
+      window.netlifyIdentity.on("init", user => {
+        if (!user) {
+          window.netlifyIdentity.on("login", () => {
+            document.location.href = "/admin/";
+          });
+        }
+      });
+    }
+  </script>
 </body>
 </html>
