--- a/services.html
+++ b/services.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>Услуги — Инжиниринг систем безопасности</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Услуги — Видеонаблюдение, СКУД, пожарная сигнализация</title>
+  <meta name="description" content="Полный спектр услуг: проектирование, поставка, монтаж и обслуживание систем видеонаблюдения, контроля доступа и пожарной сигнализации.">
+  <link rel="canonical" href="https://engin-by.netlify.app/services.html">
+  <link rel="preload" href="/style.css" as="style">
+  <link rel="stylesheet" href="/style.css">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
