--- a/about.html
+++ b/about.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>О компании — Инжиниринг систем безопасности</title>
+  <meta name="description" content="Опытная команда инженеров по системам безопасности: проектирование, монтаж, обслуживание. Репутация, качество, соответствие стандартам.">
+  <link rel="canonical" href="https://engin-by.netlify.app/about.html">
+  <link rel="preload" href="/style.css" as="style">
+  <link rel="stylesheet" href="/style.css">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
