Revert "perf(seo,ci,decap): canonical/meta, lazy images, editorial workflow, sitemap/robots, CI checks"
This reverts commit df6b4e099f2482637a3964e781fd2d4f76859beb.

--- a/certifications.html
+++ b/certifications.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Сертификаты и соответствие — Инжиниринг систем безопасности</title>
-  <meta name="description" content="Подтвержденная квалификация и соответствие отраслевым стандартам. Актуальные сертификаты и допуски.">
-  <link rel="canonical" href="https://engin-by.netlify.app/certifications.html">
-  <link rel="preload" href="/style.css" as="style">
-  <link rel="stylesheet" href="/style.css">
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <title>Сертификаты — Инжиниринг систем безопасности</title>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
