--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Инжиниринг систем безопасности — Проектирование и монтаж</title>
-  <meta name="description" content="Проектирование и монтаж систем безопасности: видеонаблюдение, СКУД, пожарная сигнализация. Работаем по Беларуси и СНГ.">
-  <link rel="canonical" href="https://engin-by.netlify.app/">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Инжиниринг систем безопасности — Главная</title>
   <link rel="icon" type="image/x-icon" href="data:image/x-icon;base64," />
-  <link rel="preload" href="/style.css" as="style">
-  <link rel="stylesheet" href="/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet" />
