--- a/projects.html
+++ b/projects.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Проекты — Примеры внедрений систем безопасности</title>
-  <meta name="description" content="Реализованные проекты по системам безопасности: промышленные объекты, торговые и офисные центры, госсектор.">
-  <link rel="canonical" href="https://engin-by.netlify.app/projects.html">
-  <link rel="preload" href="/style.css" as="style">
-  <link rel="stylesheet" href="/style.css">
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <title>Проекты — Инжиниринг систем безопасности</title>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
